# nrf7002DK_networking_examples

./: CMakeLists.txt  Kconfig  prj.conf
src/: main.c  mqtt_connection.c  mqtt_connection.h
src/http_client/: CMakeLists.txt  http_client.c  http_client.h
src/http_server/: http_server.h  socket_dumb_http.c
src/mqtt/: CMakeLists.txt
